--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mejorando Git</title>
     <link rel="stylesheet" href="/Css/Estilos.css">
+    <script src="./Js/Saludar.js"></script>
 </head>
 
 <body>
     <h1>Bienvenido al SENA</h1>
     <p>Estamos en el ADSI 2450159</p>
     <p>Mejorando Git</p>
+
+    <input type="button" onclick="saludar()" value="Vamos que vamos !!!" />
 </body>
 
 </html>
